<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/sideBar"
        layout="@layout/component_side_bar" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sideBar"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/d250" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.55" />

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#FFE8CF"
                app:layout_constraintBottom_toBottomOf="@id/textDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textTitle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/monserrat_bold"
                android:includeFontPadding="false"
                android:text="INYECTABLES"
                android:textColor="#F3C23F"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textPercent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/monserrat_medium"
                android:text="De cada 1.000 mujeres que deciden realizarla le falla 30"
                android:textColor="#C13435"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView27"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTitle" />

            <TextView
                style="@style/textParagraph"
                android:id="@+id/textDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/monserrat_light"
                android:paddingBottom="8dp"
                android:text="@string/inyectables_desc"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="@+id/textTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textPercent" />

            <ImageView
                android:id="@+id/imageView27"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:src="@drawable/inyectables"
                app:layout_constraintBottom_toBottomOf="@id/view1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/available"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.12"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:fitsSystemWindows="true"
                android:src="@drawable/woman"
                app:layout_constraintBottom_toBottomOf="@+id/textPercent"
                app:layout_constraintStart_toEndOf="@+id/textPercent"
                app:layout_constraintTop_toTopOf="@+id/textPercent" />

            <TextView
                android:id="@+id/textHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:fontFamily="@font/monserrat_bold"
                android:text="CARACTERÍSTICAS"
                android:textColor="@color/black"
                android:textSize="50sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textDesc" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/textHeader"
                app:layout_constraintTop_toBottomOf="@id/textHeader" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerFeatures"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/textHeader"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:src="@drawable/alert_condon"
                app:layout_constraintBottom_toTopOf="@+id/textTitleRecommendations"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textTitleRecommendations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/monserrat_bold"
                android:text="RECOMENDACIONES"
                android:textColor="@color/black"
                android:textSize="50sp"
                app:layout_constraintStart_toStartOf="@id/textHeader"
                app:layout_constraintTop_toBottomOf="@id/recyclerFeatures" />

            <View
                android:id="@+id/viewRecommendations"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/textHeader"
                app:layout_constraintTop_toBottomOf="@id/textTitleRecommendations" />

            <TextView
                android:id="@+id/textProcedureTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monserrat_medium"
                android:text="PROCEDIMIENTO"
                android:textColor="#000000"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@id/textHeader"
                app:layout_constraintTop_toBottomOf="@id/viewRecommendations" />

            <TextView
                android:id="@+id/textProcedure"
                style="@style/textParagraph"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/monserrat_light"
                android:paddingTop="16dp"
                android:text="@string/ligadura"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/textHeader"
                app:layout_constraintTop_toBottomOf="@id/textProcedureTitle" />

            <TextView
                android:id="@+id/textSideEffectsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monserrat_medium"
                android:paddingTop="16dp"
                android:text="POSIBLES EFECTOS SECUNDARIOS"
                android:textColor="#000000"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@id/textHeader"
                app:layout_constraintTop_toBottomOf="@id/textProcedure" />

            <TextView
                android:id="@+id/textEmptySideEffects"
                style="@style/textParagraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monserrat_light"
                android:paddingTop="16dp"
                android:text="@string/empty_side_effects"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/textHeader"
                app:layout_constraintTop_toBottomOf="@id/textSideEffectsTitle" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerSideEffects"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/textHeader"
                app:layout_constraintTop_toBottomOf="@id/textSideEffectsTitle" />

            <TextView
                android:id="@+id/textAlarmTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monserrat_medium"
                android:paddingTop="16dp"
                android:text="SITUACIONES DE ALARMA"
                android:textColor="#000000"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@id/textHeader"
                app:layout_constraintTop_toBottomOf="@id/recyclerSideEffects" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerAlarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:paddingBottom="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/textHeader"
                app:layout_constraintTop_toBottomOf="@id/textAlarmTitle" />

            <fragment
                android:id="@+id/qrFragment"
                android:name="com.teda.miaanticonceptivos.ui.methods.view.fragment.QRCodeFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="@dimen/qr_space"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerAlarm"
                tools:layout="@layout/qrcode_fragment" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>